# arrow-rs

./: .travis.yml  Cargo.toml  build.rs
src/: array.cc  array.h  array.rs  array_builder.cc  array_builder.h  buffer.cc  buffer.h  buffer.rs  column.cc  column.h  column.rs  lib.rs  memory_pool.cc  memory_pool.h  memory_pool.rs  table.cc  table.h  table.rs  ty.cc  ty.h  ty.rs  type.h  types.rs
src/common/: memory_pool.cc  memory_pool.h  memory_pool.rs  mod.rs  status.cc  status.h  status.rs
src/io/: memory.cc  memory.h  memory.rs
src/ipc/: adapter.cc  adapter.h  adapter.rs  memory.cc  memory.h  memory.rs  mod.rs
src/native/: array.rs  mod.rs
src/native/common/: mod.rs  status.rs  ty.rs
src/types/: mod.rs  primitive.cc  primitive.h  primitive.rs
tests/: lib.rs
