[package]
name = "arrow"
version = "0.0.1"
licence = "Apache-2.0"
authors = ["Jihoon Son <jihoonson@apache.org>"]
build = "build.rs"

[lib]
name = "arrow"
path = "src/lib.rs"

[dependencies]
libc = "0.2.11"

[dependencies.rustcxx_plugin]
git = "https://github.com/google/rustcxx"
branch = "unstable"

[build-dependencies]
gcc = "0.3.28"

[build-dependencies.rustcxx_codegen]
git = "https://github.com/google/rustcxx"
branch = "unstable"